crates/parsing/tests/snapshots/grammar_tests__expect_parse@negative-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/negative-binder.input
---
Input: -1
Start { kind: NegativeBinder }
  Token { kind: Minus }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
Finish

