crates/parsing/tests/snapshots/grammar_tests__expect_parse@non-empty-row.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/non-empty-row.input
---
Input: ( a :: Hello, b :: Hello )

Start { kind: RowType }
  Start { kind: Wrapped }
    Token { kind: LeftParenthesis }
    Start { kind: Separated }
      Start { kind: RowField }
        Start { kind: Name }
          Token { kind: Label }
        Finish
        Token { kind: Colon2 }
        Start { kind: ConstructorType }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
          Finish
        Finish
      Finish
      Token { kind: Comma }
      Start { kind: RowField }
        Start { kind: Name }
          Token { kind: Label }
        Finish
        Token { kind: Colon2 }
        Start { kind: ConstructorType }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
          Finish
        Finish
      Finish
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish

