crates/parsing/tests/snapshots/grammar_tests__expect_parse@number-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/number-binder.input
---
Input: 1.0
Start { kind: LiteralBinder }
  Token { kind: LiteralNumber }
Finish

