crates/parsing/tests/snapshots/grammar_tests__expect_parse@parenthesized-binder-nested.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/parenthesized-binder-nested.input
---
Input: (((1.0)))
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: ParenthesizedBinder }
    Token { kind: LeftParenthesis }
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: LiteralBinder }
        Token { kind: LiteralNumber }
      Finish
      Token { kind: RightParenthesis }
    Finish
    Token { kind: RightParenthesis }
  Finish
  Token { kind: RightParenthesis }
Finish

